working on broken REadString

--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -2,6 +2,10 @@
   "profiles": {
     "dig": {
       "commandName": "Project",
+      "commandLineArgs": "A webkinz.com"
+    },
+    "google mail": {
+      "commandName": "Project",
       "commandLineArgs": "AAAA mail.google.com"
     }
   }
